fixed spacing on roster title text

--- a/css/hillsborough.css
+++ b/css/hillsborough.css
@@ -80,10 +80,11 @@
   }
 }
 
-.codingClub-title {
+.roster-container .codingClub-title {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 28px;
 }
 
 /* --- Member cards --- */
