--- a/css/styles.css
+++ b/css/styles.css
@@ -769,6 +769,7 @@ h4 {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  margin-top: 24px;
 }
 .clean-list li {
   display: flex;
